# TraceOtter

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: ENGINEER_WORKFLOW.md  MODELS.md  SETUP.md  TRACEOTTER.md
docs/roadmap/: README.md  m1-evaluation-harness.md  m2-dataset-quality-gates.md  m3-training-automation.md  m4-public-bootstrap-mixer.md  m5-richer-distillation-targets.md  m6-reward-model-rl-prep.md  m7-oss-readiness.md
examples/traceotter/: README.md
tests/: test_traceotter.py
traceotter/: __init__.py  adapters.py  cli.py  exporters.py  io.py  models.py  pipeline.py  redact.py  skills.py
